[skia] never draw with GDI, so that all text can be gpu-accelerated https://bugs.webkit.org/show_bug.cgi?id=65203

Patch by Mike Reed <reed@google.com> on 2011-07-26
Reviewed by Kenneth Russell.

No new tests. existing tests apply to the new drawing path

* platform/graphics/chromium/FontChromiumWin.cpp:
(WebCore::TransparencyAwareFontPainter::TransparencyAwareGlyphPainter::drawGlyphs):
* platform/graphics/skia/SkiaFontWin.cpp:
(WebCore::windowsCanHandleDrawTextShadow):
(WebCore::windowsCanHandleTextDrawing):
(WebCore::windowsCanHandleTextDrawingWithoutShadow):

Canonical link: https://commits.webkit.org/80972@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91805 268f45cc-cd09-0410-ab3c-d52691b4dbfc